last name changes to HiC_QC

--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a full size pipeline test.
 
     Use as follows:
-        nextflow run fbo/hicqc -profile test_full,<docker/singularity> --outdir <OUTDIR>
+        nextflow run HiC_QC -profile test_full,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
