--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    fbo/hicqc Nextflow config file
+    HiC_QC Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -63,7 +63,7 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// Load fbo/hicqc custom profiles from different institutions.
+// Load HiC_QC custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific instititutional config already exists on nf-core/configs!
 // try {
 //   includeConfig "${params.custom_config_base}/pipeline/hicqc.config"
@@ -175,9 +175,9 @@ dag {
 }
 
 manifest {
-    name            = 'fbo/hicqc'
+    name            = 'HiC_QC'
     author          = """Franziska Bonath"""
-    homePage        = 'https://github.com/fbo/hicqc'
+    homePage        = 'https://github.com/HiC_QC'
     description     = """pipeline for OmniC QC analysis"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
