--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-description: Suggest an idea for the fbo/hicqc pipeline
+description: Suggest an idea for the HiC_QC pipeline
 labels: enhancement
 body:
   - type: textarea
