changes in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,6 +26,10 @@ process {
         ]
     }
 
+    withName: SAMTOOLS_SORT {
+        ext.prefix = "test"
+    }
+
     withName: FASTQC {
         ext.args = '--quiet'
     }
