--- a/nextflow.config
+++ b/nextflow.config
@@ -55,6 +55,8 @@ params {
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
+docker.registry = 'quay.io/' 
+
 
 // Load nf-core custom profiles from different Institutions
 try {
