optional index files from command line wit --bwa_index

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     // Input options
     input                      = null
     fasta                      = null
+    bwa_index                  = null
 
 // MultiQC options
     multiqc_config             = null
